fixed text truncate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ body, html {
     color: white;
     line-height: 0.5;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1rem
   }
 
 .force-to-bottom-todo {
@@ -117,18 +118,32 @@ a:active {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: rgb(0, 0, 27)
 }
 
+.top-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 2%;
+}
 
 
 @media only screen and (max-width: 700px) {
   .todo-card {
     font-size: 0.7rem;
+    width: 40%;
   }
-}
 
-@media only screen and (min-width: 701px) {
-  .todo-card {
+  .top-row {
+    padding-right: 5%;
+  }
+
+  .quote{
     font-size: 1rem;
+  }
+
+  .author{
+    font-size: 0.7rem;
   }
 }
